AGG-2674 - styling fixes for navbar filters that overflow

--- a/src/main/webapp/bundles/home/less/results.less
+++ b/src/main/webapp/bundles/home/less/results.less
@@ -487,3 +487,12 @@
 		}
 	}
 }
+
+
+#navbar-filter, #navbar-main {
+	z-index: 10;
+}
+
+#navbar-filter-labels {
+	z-index: 0;
+}
